# saga

./: .gitignore  LICENSE  README.md
cli/: saga
cli/theme/: apply_theme.sh
config/: shortcuts.json
desktop/eww/: eww.scss
desktop/eww/widgets/: bluetooth_menu.yuck
desktop/hypr/: hyprland.conf  saga-binds.conf  theme.conf
desktop/swaync/: config.json
desktop/walker/: config.toml  style.css
desktop/waybar/: config.jsonc  style.css
desktop/wofi/: config  style.css
sagas/: README.md  catalog.json
sagas/hrafn/: README.md  install.sh  pyproject.toml
sagas/hrafn/cli/: config.py  main.py
sagas/hrafn/cli/calendar/: stack.py
sagas/hrafn/cli/tasks/: reader.py
sagas/hrafn/hrafn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sagas/hrafn/tests/: test_agenda.py  test_calendar_mirrors.py  test_sync_service.py  test_vdirsyncer_config.py
sagas/njal/: install.sh  uninstall.sh  update.sh
sagas/njal/zsh/: zshrc
scripts/: detect-distro.sh  dev-watch.sh  eww-stream.sh  generate-binds.sh  get_cpu.sh  get_volume.sh  get_wifi.sh  install-desktop.sh  install-state.sh  launcher.sh  panel-data.sh  panel.sh  socket-client.sh  theme-apply.sh  ui-event-listener.sh  uninstall-desktop.sh  waybar-stream.sh
themes/saga-cyberpunk/: launcher.css  theme.json  variables.css  variables.scss  waybar.css
themes/saga-cyberpunk/eww/: eww.scss  eww.yuck
themes/saga-cyberpunk/sddm/: Main.qml  metadata.desktop  theme.conf
themes/saga-default/: eww.scss  launcher.css  theme.json  variables.css  variables.scss  waybar.css
themes/saga-default/sddm/: Main.qml  (+2 more)
(+8 files in other folders)
